changes to use phaser.js

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,17 +3,21 @@
   padding: 0px;
 }
 
-table{
-  margin-left: 90px;
-  margin-top: 20px;
-  position: fixed;
-}
-
 .cards{
   cursor: pointer;
   padding: 4px;
 }
 
-.title{
-  margin-left: 40vw;
+.title, b{
+  font-family: "Times New Roman", Times, serif;
+}
+
+.table-responsive .table, tr{
+  width: 1vw;
+  height: 1vh;
+}
+
+.table-responsive .table, tr, td, img{
+  width: 7vw;
+  height: 15vh;
 }
